Form setup and mongodb setup

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div class='jumbotron text-center'>
     <h1 class="display-3">{{title}}</h1>
-    <p class='lead'>Jot down your new ideas</p>
-    <a href='/ideas/add' class='btn btn-dark btn-lg'>Add idea</a>
+    <p class='lead'>Track your job apps</p>
+    <a href='/jobs/add' class='btn btn-dark btn-lg'>Add Job</a>
 </div>
