--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,3 +1,3 @@
 <h1>About</h1>
-<p>This is a Node/Express for jotting down ideas</p>
+<p>This is a Node/Express for keep track of job applications</p>
 <p>Version 1.0.0</p>
