--- a/views/jobs/edit.handlebars
+++ b/views/jobs/edit.handlebars
@@ -1,6 +1,5 @@
 <div class="card card-body">
     <h3>Edit Job Details</h3>
-    {{status}}
     <form action='/jobs/{{id}}?_method=PUT' method="POST">
         <input type='hidden' name='_method' value='PUT'>
         <div class="form-group">
@@ -17,15 +16,15 @@
         </div>
         <div class="form-group">
             <label for="details">Details</label>
-            <textarea class='form-control' name='details'>{{status}}</textarea>
+            <textarea class='form-control' name='details'>{{details}}</textarea>
         </div>
         <div class="form-group">
-            <label for="details">Status</label>
-            <input class='form-control' name='details' value={{details}}>
+            <label for="status">Status</label>
+            <input class='form-control' name='status' value='{{status}}'>
         </div>
         <div class="form-group">
             <label for="link">Link</label>
-            <input class='form-control' name='link' value={{link}}>
+            <input class='form-control' name='link' value='{{link}}'>
         </div>
         <button type='submit' class='btn btn-primary'>Submit</button>
     </form>
