--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -15,13 +15,25 @@
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink">Job apps</a>
-          <div class="dropdown-menu">
-            <a href="/jobs" class="dropdown-item">Jobs</a>
-            <a href="/jobs/add" class="dropdown-item">Add Job</a>
-          </div>
-        </li>
+        {{#if user}}
+          <li class="nav-item dropdown">
+              <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink">Job apps</a>
+            <div class="dropdown-menu">
+              <a href="/jobs" class="dropdown-item">Jobs</a>
+              <a href="/jobs/add" class="dropdown-item">Add Job</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/logout">Logout</a>
+          </li>
+        {{else}}
+          <li class="nav-item">
+            <a class="nav-link" href="/users/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/register">Register</a>
+          </li>
+        {{/if}}
       </ul>
     </div>
   </div>
